[tool.poetry]
name = "repro-sanic-openapi-parameter-explode"
version = "0.1.0"
description = "Reproduction of an issue where explode is not passed through when using sanic-ext openapi Parameter"
authors = ["David Asabina <vid@bina.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "repro_sanic_openapi_parameter_explode"}]

[tool.poetry.dependencies]
python = "~3.10"
sanic = "^23.3.0"
sanic-ext = "^23.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.259"
pytype = "^2023.3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
